# microprocessor

./: .gitignore  CMakeLists.txt  README.md
include/memory/: memory.h
include/proc/: decoder.h  processor.h  register.h
src/memory/: CMakeLists.txt  memory.cxx
src/proc/: CMakeLists.txt  arithmetic.cxx  common.cxx  increments_and_decrements.cxx  load_store_ops.cxx  logical_ops.cxx  processor.cxx  processor_status_register.cxx  register_transfers.cxx  shifts.cxx  stack_ops.cxx  status_flag_changes.cpp  system_functions.cxx
tests/: CMakeLists.txt
tests/memory/: CMakeLists.txt  test_memory.cxx
tests/proc/: CMakeLists.txt  test_arithmetic.cxx  test_generic_register.cxx  test_increments_and_decrements.cxx  test_load_store_registers.cxx  test_processor_status_register.cxx  test_register_transfers.cxx
